--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "e2e": "ng serve & npx cypress open --e2e",
-    "e2e:deploy": "ng serve & npx cypress run --e2e --headless defaultCommandTimeout=10000"
+    "e2e:deploy": "bash -c 'ng serve & SERVER_PID=$!; trap \"kill $SERVER_PID\" EXIT; until curl -sf http://localhost:4200 > /dev/null; do sleep 1; done; npx cypress run --e2e --headless --config defaultCommandTimeout=10000'"
   },
   "private": true,
   "dependencies": {
